@@ -3,7 +3,8 @@ $Date$
 VEGAN RELEASE VERSIONS at http://cran.r-project.org/
 
 Version 2.0-4 (opened March 9, 2012)
-
+	
+	* merge r2178, 2180: ordipointlabel gains 'select' argument.
 	* merge r2173-2176, 2185: ordihull labels, semintransparent
 	colours in ordihull & ordiellipse.
 	* merge r2170: bioenv accepts dissimilarities as input.
